<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MappingMode">

    <TextView
        android:id="@+id/MappingTitle"
        style="@style/appHeaders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="Upload Floorplan"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/DeviceUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/my_button"
        android:gravity="center"
        android:text="UPLOAD FROM DEVICE"
        app:layout_constraintTop_toBottomOf="@+id/PreviewImage"
        tools:layout_editor_absoluteX="40dp" />

    <Button
        android:id="@+id/UrlUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/my_button"
        android:gravity="center"
        android:text="UPLOAD FROM URL"
        app:layout_constraintTop_toBottomOf="@+id/button_changeImage"
        tools:layout_editor_absoluteX="40dp" />

    <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
        android:id="@+id/PreviewImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MappingTitle"
        app:layout_constraintVertical_bias="0.082"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="VectorDrawableCompat"
        tools:srcCompat="?android:attr/scrollbarTrackVertical" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/UrlBox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textEmailAddress"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DeviceUpload">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/UrlEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:ems="10"
            android:hint="URL"
            android:maxLines="2"
            tools:ignore="KeyboardInaccessibleWidget" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ConfirmURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/my_button"
        android:text="Confirm URL"
        app:layout_constraintTop_toBottomOf="@+id/UrlBox"
        tools:layout_editor_absoluteX="24dp" />

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/my_button"
        android:text="Start Mapping"
        app:layout_constraintTop_toBottomOf="@+id/button_changeImage"
        tools:layout_editor_absoluteX="60dp" />

    <Button
        android:id="@+id/button_changeImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/my_button"
        android:text="Change Image"
        app:layout_constraintTop_toBottomOf="@+id/DeviceUpload"
        tools:layout_editor_absoluteX="60dp" />

    <Button
        android:id="@+id/FirebaseUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:text="Choose from Uploaded Maps"
        app:layout_constraintTop_toBottomOf="@+id/UrlUpload"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/tvInvalidPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="99dp"
        android:fontFamily="monospace"
        android:text=""
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>