<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpPage">

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/appHeaders" />

    <ImageView
        android:id="@+id/imageViewAppIcon"
        android:layout_width="123dp"
        android:layout_height="123dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_icon"
        android:src="@drawable/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegister" />

    <TextView
        android:id="@+id/textViewAppName"
        style="@style/appNameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_bold"
        android:lineSpacingExtra="8sp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAppIcon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NameBox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/hint_name"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ellipsize="end"
            android:maxLines="1"
            tools:ignore="KeyboardInaccessibleWidget" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailBox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_email"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            tools:ignore="KeyboardInaccessibleWidget" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordBox1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_password"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailBox"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:inputType="textPassword"
            android:maxLines="1"
            tools:ignore="KeyboardInaccessibleWidget" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordBox2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/re_enter_password"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordBox1"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:inputType="textPassword"
            android:maxLines="1"
            tools:ignore="KeyboardInaccessibleWidget" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_margin="20dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordBox2"
        style="@style/confirmButton" />


</androidx.constraintlayout.widget.ConstraintLayout>