<resources>
    <string name="app_name">TRACQIT!</string>
    <string name="app_icon">appIcon</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="mapping_mode">Mapping</string>
    <string name="testing_mode">Testing</string>
    <string name="test_wifi_scan">Test WiFi Scanning</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="save_curr_pos">Save Current Position</string>
    <string name="complete_mapping">Complete Mapping</string>
    <string name="select_avail_map">Select Available Map</string>
    <string name="where_am_i">WHERE AM I</string>
    <string name="test_wifi_title">Test WiFi</string>
    <string name="obtain_wifi_data">Obtain WiFi Data</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="testing_back">BACK</string>
    >>>>>>> master
</resources>